flower knows and ohwhaleco

--- a/flowerknows.html
+++ b/flowerknows.html
@@ -64,7 +64,7 @@
         <section id="fk-process">
             <div class="container">
                 <div>
-                    <img src="img/placeholder5x4.png" alt="sketches and digitization">
+                    <img src="img/fk_sketches.webp" alt="sketches and digitization">
                 </div>
                 <div>
                     <h2>Logo Evolution</h2>
@@ -89,22 +89,13 @@
                         </div>
                         <div class="color-chips">
                             <svg width="100" height="100">
-                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#bec1ae"/>
+                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#f8b0a7"/>
                             </svg>
                             <svg width="100" height="100">
-                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#61763c"/>
+                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#fce4c7"/>
                             </svg>
                             <svg width="100" height="100">
-                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#b0c4dd"/>
-                            </svg>
-                            <svg width="100" height="100">
-                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#6d91cb"/>
-                            </svg>
-                            <svg width="100" height="100">
-                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#b5406c" />
-                            </svg>
-                            <svg width="100" height="100">
-                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#a12a4a" />
+                                <rect width="200" height="200" x="0" y="0" rx="0" ry="0" fill="#6a4964"/>
                             </svg>
                         </div>
                     </div>
@@ -112,13 +103,9 @@
                         <div class="asset-header">
                             <h2>Type</h2>
                         </div>
-                        <div class="pf-fuel">
+                        <div class="minion">
                             <h2>Aa</h2>
-                            <h4>PF Fuel Grime</h4>
-                        </div>
-                        <div class="sofia">
-                            <h2>Aa</h2>
-                            <h4>Sofia Pro</h4>
+                            <h4>Minion</h4>
                         </div>
                     </div>
 
@@ -127,13 +114,11 @@
                             <h2>Elements</h2>
                         </div>
                         <div>
-                            <img src="img/ff_asset_pellet.webp" alt="">
-                            <img src="img/ff_asset_sage.webp" alt="">
-                            <!-- <img src="img/ff_asset_pellet2.webp" alt=""> -->
-                            <img src="img/ff_asset_pellet3.webp" alt="">
-                            <img src="img/ff_asset_powder.webp" alt=""> 
-                            <img src="img/ff_asset_sketch.webp" alt="">
-                            <img src="img/ff_asset_violet.webp" alt=""> 
+                            <img src="img/fk_asset_cork.webp" alt="">
+                            <img src="img/fk_asset_fill.webp" alt="">
+                            <img src="img/fk_asset_heart.webp" alt="">
+                            <img src="img/fk_asset_neck.webp" alt=""> 
+                            <img src="img/fk_asset_star.webp" alt="">
                         </div>
                     </div>
                 </div>
