added imgs to ss, fixed title for pages,  about intro spacing, img alt caption

--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | About</title>
+    <title>Katheren | Works</title>
 
 <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css">
@@ -51,8 +51,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section>
             <div class="row">
                 <div class="one-half">
                     <div class="grow">
