--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | About</title>
+    <title>Katheren | About</title>
 
 <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css">
@@ -42,7 +42,7 @@
 
     <main class="site-main">
         <div class="container">
-            <section>
+            <section class="intro">
                 <div class="row">
                     <div class="one-third column">
                         <div class="swiper">
@@ -68,19 +68,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="two-thirds column">
+                    <div class="col-7 push-5">
                         <h2>Katheren [kat-ther-ren] (n.)</h2>
-                        <p>A multidisciplinary designer who specializes in 2D design and layout. An out of the box who provides a different point of view. Enjoys hands on learning <br>and bringing creative projects to life.</p>
+                        <p>A multidisciplinary designer who specializes in 2D design and layout. An out of the box who provides a different point of view. Enjoys hands on learning and bringing creative projects to life.</p>
+    <!-- Multidisciplinary design is about using multiple disciplines, while interdisciplinary design is about merging disciplines.
+    Multidisciplinary design is more about drawing on the knowledge from different fields, while interdisciplinary design is about creating a new entity by combining those fields.  -->
 
                         <div class="row">
-                            <div class="one-half column intro-software">
+                            <div class="col-3 intro-software">
                                 <img  src="img/adobe_cloud.png" alt="adobe cloud" width="100" height="100">
                                 <img  src="img/vscode.png" alt="visual studio code" width="100" height="100">
                                 <img  src="img/figma.png" alt="figma" width="100" height="100">
                             </div>
-                            <div class="one-half collumn push-7 intro-contact">
+                            <div class="col-6 push-6 intro-contact">
                                 <h3>Let's chat!</h3>
-                                <p><a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
+                                <p class="email"><a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
                                 <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
                                 </ul>
                             </div>
