--- a/flowerknows.html
+++ b/flowerknows.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Frau Feuer</title>
+    <title>Katheren | Flower Knows</title>
 
 <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css">
@@ -41,7 +41,7 @@
     <main class="site-main">
         <section id="fk_hero">
             <div class="full-width">
-                    <img src="img/fk_logo_onproduct.jpg" width="1600"  style="width: 100%; height: 40em; object-fit: cover;" alt="logo on product">
+                    <img src="img/fk_strawberry.webp" width="1600"  style="width: 100%; height: 40em; object-fit: cover;" alt="logo on product">
             </div>
         </section>
         <section>
@@ -50,7 +50,7 @@
                     <div class="two-thirds column">
                         <h2>Flower Knows</h2>
                         <h3>A fairytale brand transformation</h3>
-                        <p>Based in China, Flower Knows produces affordable makeup with fantastical and complex adornment taking influence from Asia and Europe. 
+                        <p>Based in China, Flower Knows produces affordable makeup with fantastical and complex adornment taking influence from Asia and Europe.  
                         Flower Knows has a primary logo set in type, I wanted to create a charming graphic that could be used on brand packaging or merchandise.</p>
                     </div>
                     <div class="col-3 push-8">
@@ -72,13 +72,13 @@
                 </div>
                 <div class="row port-box text-centered">
                     <div class="one-third column">
-                        <img src="img/flowerknows_bottle.png" alt="">
+                        <img src="img/flowerknows_bottle.png" alt="flower knows black and white bottle logo">
                     </div>
                     <div class="one-third column">
-                        <img src="img/flowerknows_flower.png" alt="">
+                        <img src="img/flowerknows_flower.png" alt="flower knows black and white flower logo">
                     </div>
                     <div class="one-third column"> 
-                        <img src="img/flowerknows_fox.png" alt="">
+                        <img src="img/flowerknows_fox.png" alt="flower knows black and white fox logo">
                     </div>
                 </div>
 
@@ -114,11 +114,11 @@
                             <h2>Elements</h2>
                         </div>
                         <div>
-                            <img src="img/fk_asset_cork.webp" alt="">
-                            <img src="img/fk_asset_fill.webp" alt="">
-                            <img src="img/fk_asset_heart.webp" alt="">
-                            <img src="img/fk_asset_neck.webp" alt=""> 
-                            <img src="img/fk_asset_star.webp" alt="">
+                            <img src="img/fk_asset_cork.webp" alt="cork">
+                            <img src="img/fk_asset_fill.webp" alt="filled liquid of bottle">
+                            <img src="img/fk_asset_heart.webp" alt="heart bottle body">
+                            <img src="img/fk_asset_neck.webp" alt="neck of bottle"> 
+                            <img src="img/fk_asset_star.webp" alt="stars in bottle">
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
         </section>
         <section>
             <div class="container">
-                <img src="img/flowerknows_box_mockup.png" alt="">
+                <img src="img/flowerknows_box_mockup.png" alt="flower knows box mock up">
             </div>
         </section>        
 
