updated most imgs to webp

--- a/fraufeuer.html
+++ b/fraufeuer.html
@@ -41,7 +41,7 @@
     <main class="site-main">
         <section>
             <div class="full-width">
-                    <img src="img/fraufeuer_hero.jpg" alt="frau feuer powder blue product">
+                    <img src="img/fraufeuer_hero.webp" alt="frau feuer powder blue product">
             </div>
         </section>
         <section>
