--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="one-fourth column">
                         <div class="oneone-img">
-                            <a href="fraufeuer.html"><img src="img/fraufeuer_sage.jpg" alt="frau feuer branding design" width="700" height="700">
+                            <a href="fraufeuer.html"><img src="img/fraufeuer_sage.webp" alt="frau feuer branding design" width="700" height="700">
                             </a>
                             <div class="project-details">
                                 <h3>Frau Feuer</h3>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
 
-                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_mockup.jpg" alt="Fictional pop group, Second Star, album design" width="700" height="700"></a>
+                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_mockup.webp" alt="Fictional pop group, Second Star, album design" width="700" height="700"></a>
                         <div class="project-details">
                             <h3>Second Star</h3>
                             <p>#Branding #Layout</p>
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="one-fourth column oneone-img">
-                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.png" alt="flower knows logo redesign" width="700" height="700"></a>
+                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.webp" alt="flower knows logo redesign" width="700" height="700"></a>
                     <div class="project-details">
                         <h3>Flower Knows</h3>
                         <p>#Redesign #Logo</p>
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="row centered">
                     <div class="one-third column push-1 flex-center">
-                        <img src="img/katheren_profile.jpg" alt="Profile Picture">
+                        <img src="img/katheren_profile.webp" alt="Profile Picture">
                     </div>  
                     <div class="column col-6 push-6">
                         <h2 class="rotate-vert-n">大家好！ </h2>
