--- a/ohwhaleco.html
+++ b/ohwhaleco.html
@@ -84,12 +84,12 @@
                     </div>
                     <div class="one-third column">
                         <h3>Stage 1</h3>
-                        <img src="img/ohwhale_figma_r1.jpg" alt="Round one low fidelity UI design">
+                        <img src="img/ohwhale_figma_r1.webp" alt="Round one low fidelity UI design">
                         
                     </div>
                     <div class="one-third column"> 
                         <h3>Stage 2</h3>
-                        <img src="img/ohwhale_figma_r2_3.jpg" alt="Round two high fidelity UI design">
+                        <img src="img/ohwhale_figma_r2_3.webp" alt="Round two high fidelity UI design">
                         
                     </div>
                 </div>
