--- a/works.html
+++ b/works.html
@@ -42,19 +42,19 @@
             <div class="row">
                 <div class="one-half">
                     <div class="grow">
-                        <a href="fraufeuer.html"><img src="img/fraufeuer.jpg" alt="Frau Feuer Product Design"></a>
+                        <a href="fraufeuer.html"><img src="img/fraufeuer.webp" alt="Frau Feuer Product Design"></a>
                     </div>
                 </div>
                 <div class="one-half">
                     <div class="grow">
-                        <a href="secondstar.html"><img src="img/ss_mockup.jpg" alt="Second Star Album Design"></a>
+                        <a href="secondstar.html"><img src="img/ss_mockup.webp" alt="Second Star Album Design"></a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="one-half">
                     <div class="grow">
-                        <a href="flowerknows.html"><img src="img/FlowerKnows_BoxnBlush_Mockup.png" alt="flower knows corporate logo"></a>
+                        <a href="flowerknows.html"><img src="img/fk_box_n_blush_mockup.webp" alt="flower knows box and blush mockup"></a>
                     </div>
                 </div>
                 <div class="one-half">
