--- a/about.html
+++ b/about.html
@@ -48,22 +48,22 @@
                         <div class="swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="img/katheren_profile.jpg" alt="about me image" width="2228" height="2971">
+                                    <img src="img/katheren_profile.webp" alt="about me image" width="2228" height="2971">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/katheren_hanfu.jpg" alt="Hanfu Photoshoot">
+                                    <img src="img/katheren_hanfu.webp" alt="Hanfu Photoshoot">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/katheren_flowers.jpg" alt="pink flower photoshoot">
+                                    <img src="img/katheren_flowers.webp" alt="pink flower photoshoot">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/katheren_claw.jpg" alt="arcade travel">
+                                    <img src="img/katheren_claw.webp" alt="arcade travel">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/katheren_oias.JPG" alt="coaching">
+                                    <img src="img/katheren_oias.webp" alt="coaching">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/katheren_kj.jpeg" alt="KillJoy Cosplay">
+                                    <img src="img/katheren_kj.webp" alt="KillJoy Cosplay">
                                 </div>
                             </div>
                         </div>
@@ -76,9 +76,9 @@
 
                         <div class="row">
                             <div class="col-3 intro-software">
-                                <img  src="img/adobe_cloud.png" alt="adobe cloud" width="100" height="100">
-                                <img  src="img/vscode.png" alt="visual studio code" width="100" height="100">
-                                <img  src="img/figma.png" alt="figma" width="100" height="100">
+                                <img  src="img/adobe_cloud.webp" alt="adobe cloud" width="100" height="100">
+                                <img  src="img/vscode.webp" alt="visual studio code" width="100" height="100">
+                                <img  src="img/figma.webp" alt="figma" width="100" height="100">
                             </div>
                             <div class="col-6 push-6 intro-contact">
                                 <h3>Let's chat!</h3>
