--- a/flowerknows.html
+++ b/flowerknows.html
@@ -72,13 +72,13 @@
                 </div>
                 <div class="row port-box text-centered">
                     <div class="one-third column">
-                        <img src="img/flowerknows_bottle.png" alt="flower knows black and white bottle logo">
+                        <img src="img/flowerknows_bottle.webp" alt="flower knows black and white bottle logo">
                     </div>
                     <div class="one-third column">
-                        <img src="img/flowerknows_flower.png" alt="flower knows black and white flower logo">
+                        <img src="img/flowerknows_flower.webp" alt="flower knows black and white flower logo">
                     </div>
                     <div class="one-third column"> 
-                        <img src="img/flowerknows_fox.png" alt="flower knows black and white fox logo">
+                        <img src="img/flowerknows_fox.webp" alt="flower knows black and white fox logo">
                     </div>
                 </div>
 
@@ -126,7 +126,7 @@
         </section>
         <section>
             <div class="container">
-                <img src="img/flowerknows_box_mockup.png" alt="flower knows box mock up">
+                <img src="img/flowerknows_box_mockup.webp" alt="flower knows box mock up">
             </div>
         </section>        
 
