updated ss star graphics

--- a/secondstar.html
+++ b/secondstar.html
@@ -82,8 +82,8 @@
         </section>
         <section id="ss-process">
             <div class="container">
-                <div>
-                    <img src="img/ss_sketches.webp" alt="ss_sketches">
+                <div class="sketches">
+                    <img src="img/ss_sketches_digitized.webp" alt="digitized sketches">
                 </div>
                 <div>
                     <h2>Logo Evolution</h2>
@@ -215,7 +215,7 @@
                                     
                                     <div class="playlist">
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_viveka.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>Forever</p>
                                                 <p>keshi</p>
@@ -224,7 +224,7 @@
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_dinner.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>You Would</p>
                                                 <p>JHIN</p>
@@ -233,7 +233,7 @@
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_polaroid.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>alright</p>
                                                 <p>raph</p>
@@ -242,7 +242,7 @@
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_bday.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>Love You Twice</p>
                                                 <p>Huh Yunjin</p>
@@ -251,7 +251,7 @@
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_alas.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>deja vu</p>
                                                 <p>starfall</p>
@@ -260,7 +260,7 @@
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_hmart.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>Soft Spot</p>
                                                 <p>keshi</p>
@@ -269,7 +269,7 @@
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_saras.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>Now I Know</p>
                                                 <p>Jason Yu</p>
@@ -278,7 +278,7 @@
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
-                                            <img src="img/ss_spotify.webp" alt="placeholder">
+                                            <img src="img/ss_mini_sura.webp" alt="placeholder">
                                             <div class="song">
                                                 <p>Last Goodbye</p>
                                                 <p>sunkis</p>
