--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                             <div class="col-6 push-6 intro-contact">
                                 <h3>Let's chat!</h3>
                                 <p class="email"><a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
-                                <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
+                                <p><a class="button" href="https://drive.google.com/file/d/1pdBgWuCxkfshA1xQBnQtQZe91oxk72lY/view?usp=drive_link" target="#">Check Out My Resume</a></p>
                                 </ul>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                         <ul>
                             <li>Kapi‘olani Community College</li>
                             <li>A.S. New Media Arts Interface Design</li>
-                            <li>August 2022 - Present</li>
+                            <li>August 2022 - May 2025</li>
                         </ul>
                         <ul>
                             <li>Kapi‘olani Community College</li>
@@ -149,7 +149,7 @@
                         <ul>
                             <li>Kapi‘olani Community College</li>
                             <li>Board of Student Publications Member</li>
-                            <li>March 2021 - Present</li>
+                            <li>March 2021 - May 2025</li>
                         </ul>
                         <ul>
                             <li>Kapāolono Community Park</li>
