--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                         <h3>Contact</h3>
                         <p class="email">Email: <a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
-                        <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
+                        <p><a class="button" href="https://drive.google.com/file/d/1pdBgWuCxkfshA1xQBnQtQZe91oxk72lY/view?usp=drive_link" target="#">Check Out My Resume</a></p>
                     </div>
                 </div>
             </div>
