--- a/index.html
+++ b/index.html
@@ -29,18 +29,24 @@
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
         </div>
 
-        <nav class="site-navigation">
+        <nav class="site-navigation dropdown">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
                 <li class="selected"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="works.html">Works</a></li>
+                <li><a href="works.html">Works &dtrif;</a>
+                    <ul>
+                        <li><a href="fraufeuer.html">Frau Feuer</a></li>
+                        <li><a href="secondstar.html">Second Star</a></li>
+                        <li><a href="flowerknows.html">Flower Knows</a></li>
+                        <li><a href="ohwhaleco.html">ohwhale.co</a></li>
+                    </ul></li>
             </ul>
         </nav>
     </header>
 
     <main class="site-main">
-        <section class="hero">
+        <section class="hero text-centered">
             <div class="container">
                 <div class="hero-name-rect">
                     <h4>Interdisciplinarity Designer</h4>
@@ -156,9 +162,9 @@
                 </div>
                 <div class="column col-2 push-9 no-deco">
                     <ul>
-                        <li><a href="flowerknows.html">Flower Knows</a></li>
                         <li><a href="fraufeuer.html">Frau Feuer</a></li>
                         <li><a href="secondstar.html">Second Star</a></li>
+                        <li><a href="flowerknows.html">Flower Knows</a></li>
                         <li><a href="ohwhaleco.html">ohwhale.co </a></li>                 
                     </ul>
                 </div>
