--- a/secondstar.html
+++ b/secondstar.html
@@ -28,34 +28,31 @@
 </head>
 
 
-<body class="secondstar-casestudy">
+<body class="secondstar-casestudy light-toggle-nav">
     <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
         </div>
 
-        <nav class="site-navigation">
+        <nav class="site-navigation dropdown">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="works.html">Works</a></li>
-                <!-- <li><a href="works.html">Works &dtrif;</a>
-                    <ul class="dropdown">
-                        <li><a href="fraufeuer.html"></a></li>
-                        <li><a href="secondstar.html"></a></li>
-                        <li><a href="flowerknows.html"></a></li>
-                        <li><a href="ohwhaleco.html"></a></li>
-                    </ul>
-                </li> -->
-                    
+                <li><a href="works.html">Works &dtrif;</a>
+                    <ul>
+                        <li><a href="fraufeuer.html">Frau Feuer</a></li>
+                        <li class="selected"><a href="secondstar.html">Second Star</a></li>
+                        <li><a href="flowerknows.html">Flower Knows</a></li>
+                        <li><a href="ohwhaleco.html">ohwhale.co</a></li>
+                    </ul></li>
             </ul>
         </nav>
     </header>
 
     <main class="site-main">
-        <section class="full-width">
-            <div>
+        <section>
+            <div class="full-width">
                 <img src="img/ss_mockup.webp" alt="second star image wrap cover" style="width: 100%; height: 40em; object-fit: cover;">
             </div>
         </section>
@@ -361,10 +358,10 @@
                 </div>
                 <div class="column col-2 push-9 no-deco">
                     <ul>
-                        <li><a href="flowerknows.html">Flower Knows</a></li>
                         <li><a href="fraufeuer.html">Frau Feuer</a></li>
                         <li><a href="secondstar.html">Second Star</a></li>
-                        <li><a href="ohwhaleco.html">ohwhale.co </a></li>                 
+                        <li><a href="flowerknows.html">Flower Knows</a></li>
+                        <li><a href="ohwhaleco.html">ohwhale.co </a></li>                  
                     </ul>
                 </div>
             </div>
