updated footer color on works pages and my projects link

--- a/fraufeuer.html
+++ b/fraufeuer.html
@@ -187,8 +187,7 @@
                     </div>
                 </div>
                 <div class="column col-1 push-8 rotate-vert-n">
-                    <h5 class="rotate-vert">MY PROJECTS</h5>
-                </div>
+                    <h5><a href="works.html">MY PROJECTS</a></h5>                </div>
                 <div class="column col-2 push-9 no-deco">
                     <ul>
                         <li><a href="fraufeuer.html">Frau Feuer</a></li>
