adjusted colors, fixed toggle nav on small screen colors, and WIP to clean up css

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     Multidisciplinary design is more about drawing on the knowledge from different fields, while interdisciplinary design is about creating a new entity by combining those fields.  -->
 
                         <div class="row">
-                            <div class="col-3 intro-software">
+                            <div class="col-3 software-apps">
                                 <img  src="img/adobe_cloud.webp" alt="adobe cloud" width="100" height="100">
                                 <img  src="img/vscode.webp" alt="visual studio code" width="100" height="100">
                                 <img  src="img/figma.webp" alt="figma" width="100" height="100">
