--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             </a>
                             <div class="project-details">
                                 <h3>Frau Feuer</h3>
-                                <p>#Branding</p>
+                                <p>#Branding #Packaging</p>
                             </div>
                         </div>
                     </div>
