--- a/flowerknows.html
+++ b/flowerknows.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body class="flowerknows-casestudy light-toggle-nav">
+<body class="flowerknows-casestudy">
     <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
