--- a/ohwhaleco.html
+++ b/ohwhaleco.html
@@ -28,7 +28,7 @@
 </head>
 
 
-<body class="ohwhaleco-casestudy light-toggle-nav">
+<body class="ohwhaleco-casestudy">
     <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
