adjust index about section on mobile, flower knows description

--- a/flowerknows.html
+++ b/flowerknows.html
@@ -57,7 +57,8 @@
                         <h2>Flower Knows</h2>
                         <h3>A fairytale brand transformation</h3>
                         <p>Based in China, Flower Knows produces affordable makeup with fantastical and complex adornment taking influence from Asia and Europe.  
-                        Flower Knows has a primary logo set in type, I wanted to create a charming graphic that could be used on brand packaging or merchandise.</p>
+                        Flower Knows has a primary logo set in type, I wanted to create a charming graphic that could be used on brand packaging or merchandise.
+                        The pre-existing design is very ornate and complex, throught it  still maintains thier signature pink color. The pink is a great addition to make it soft and cutesy.</p>
                     </div>
                     <div class="col-3 push-8">
                         <div class="logo">
