--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="one-half column info-strip">
                             <h1>Behind the Scenes</h1>
                             <h2>The Designer</h2>
-                            <p>Hey there! I’m Katheren, a multidisciplinary designer based in Honolulu, Hawaii. I specialize in 2D design, layout, and UI/UX development.</p>
+                            <p>Hey there! I’m Katheren, a multidisciplinary designer based in Honolulu, Hawaii. My specialty is in 2D design, layout, and UI/UX development.</p>
                             <p>I have a passion for creation and bringing ideas to life. I enjoy hands-on learning and immersing myself in projects.</p>
                             <p>I’d consider myself a bit of an out of the box thinker who can provide a different point of view.  </p>
                             <p>On my free time I enjoy playing video games, cooking, and spending time with my friends.</p>
